--- a/readme
+++ b/readme
@@ -2,6 +2,6 @@ Para rodar:
 
     python3 worldofwumpus.py <debug>
 
-    debug vai de 0 a 5, com 0 sendo mapa aleatório e o9s outros sendo mapas de teste
+    debug vai de 0 a 5, com 0 sendo mapa aleatório e os outros sendo mapas de teste
 
 é necessário ter instalado o Gtk 3 e o módulo playsound
